dev-ops/center-node/k8s/metrics_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - metrics.zwkzone.cn
      secretName: metrics-tls
  rules:
    - host: metrics.zwkzone.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoria-metrics
                port:
                  number: 8428
